Small description update
Small description update

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ relative_links:
   collections: true
 theme: jekyll-theme-cayman
 title: "Privacy Security Anonnymity Community"
-description: 
+description: "A Project of the Anonymous Planet Organization"
 tagline: Privacy Security Anonnymity Community
 author: AnonymousPlanet
 github:
