Small direct word change
Small direct word change

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ theme: jekyll-theme-cayman
 tagline: Privacy Security Anonymity Community
 author: Anonymous Planet
 title: "Privacy Security Anonymity Community"
-description: "A Project of the Anonymous Planet Organization"
+description: "A Project by the Anonymous Planet Organization"
 github:
   home_url: index.html
   license_url: LICENSE.html
